Fix to scroll when overlay panel is too tall for viewport

--- a/src/styles/overlay-panel.less
+++ b/src/styles/overlay-panel.less
@@ -115,6 +115,8 @@ body.overlay-open {
 .catalogs-overlay-panel-wrapper {
   bottom: 0;
   left: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
   position: fixed;
   right: 0;
   top: 0;
